--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -130,7 +130,7 @@
 
 ::before,
 ::after {
-  --tw-content: "";
+  --tw-content: '';
 }
 
 /*
@@ -152,10 +152,9 @@ html,
   -moz-tab-size: 4;
   /* 3 */
   -o-tab-size: 4;
-  tab-size: 4;
+     tab-size: 4;
   /* 3 */
-  font-family: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji",
-    "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   /* 4 */
   font-feature-settings: normal;
   /* 5 */
@@ -198,7 +197,7 @@ Add the correct text decoration in Chrome, Edge, and Safari.
 
 abbr:where([title]) {
   -webkit-text-decoration: underline dotted;
-  text-decoration: underline dotted;
+          text-decoration: underline dotted;
 }
 
 /*
@@ -244,8 +243,7 @@ code,
 kbd,
 samp,
 pre {
-  font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas,
-    "Liberation Mono", "Courier New", monospace;
+  font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
   /* 1 */
   font-feature-settings: normal;
   /* 2 */
@@ -346,11 +344,10 @@ select {
 */
 
 button,
-input:where([type="button"]),
-input:where([type="reset"]),
-input:where([type="submit"]) {
+input:where([type='button']),
+input:where([type='reset']),
+input:where([type='submit']) {
   -webkit-appearance: button;
-  appearance: button;
   /* 1 */
   background-color: transparent;
   /* 2 */
@@ -396,9 +393,8 @@ Correct the cursor style of increment and decrement buttons in Safari.
 2. Correct the outline style in Safari.
 */
 
-[type="search"] {
+[type='search'] {
   -webkit-appearance: textfield;
-  appearance: textfield;
   /* 1 */
   outline-offset: -2px;
   /* 2 */
@@ -490,8 +486,7 @@ textarea {
 2. Set the default placeholder color to the user's configured gray 400 color.
 */
 
-input::-moz-placeholder,
-textarea::-moz-placeholder {
+input::-moz-placeholder, textarea::-moz-placeholder {
   opacity: 1;
   /* 1 */
   color: #9ca3af;
@@ -539,6 +534,8 @@ embed,
 object {
   display: block;
   /* 1 */
+  vertical-align: middle;
+  /* 2 */
 }
 
 /*
@@ -578,13 +575,13 @@ video {
 
 .social-links a {
   margin: 0 10px;
-  color: #ffcc00;
+  color: #FFCC00;
   text-decoration: none;
   transition: 0.4s;
 }
 
 .social-links a:hover {
-  opacity: 0.6;
+  opacity: .6;
 }
 
 body {
@@ -598,7 +595,7 @@ footer {
   bottom: 0;
   left: 0;
   width: 100%;
-  color: #ffffff;
+  color: #FFFFFF;
   text-align: center;
   padding: 10px 0;
 }
@@ -612,7 +609,7 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
-  color: rgb(174, 174, 174);
+  color:rgb(174, 174, 174);
 }
 
 svg {
@@ -626,7 +623,7 @@ svg {
   font-family: Trebuchet MS, sans-serif;
   font-size: 12.2px;
   /* 20% smaller font size */
-  color: #ffcc00;
+  color: #FFCC00;
 }
 
 .rain {
@@ -674,11 +671,7 @@ body.back-row-toggle .rain.back-row {
   width: 1px;
   height: 60%;
   margin-left: 7px;
-  background: linear-gradient(
-    to bottom,
-    rgba(255, 255, 255, 0),
-    rgba(255, 255, 255, 0.25)
-  );
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0.25));
   animation: stem 0.5s linear infinite;
 }
 
@@ -737,11 +730,11 @@ body.splat-toggle .splat {
   }
 }
 
-.social-links a > img {
+.social-links a>img {
   height: 30px;
 }
 
-.social-links > img {
+.social-links>img {
   width: 250px;
   margin-bottom: 20px;
 }
@@ -757,14 +750,14 @@ body.splat-toggle .splat {
 @media screen and (max-width: 950px) {
   #bg_girl {
     height: 70vh;
-    bottom: 3vh;
+    bottom: 3vh
   }
 }
 
 @media screen and (max-width: 770px) {
   #bg_girl {
     height: 40vh;
-    bottom: 3vh;
+    bottom: 3vh
   }
 }
 
