--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -1,4 +1,6 @@
-*, ::before, ::after {
+*,
+::before,
+::after {
   --tw-border-spacing-x: 0;
   --tw-border-spacing-y: 0;
   --tw-translate-x: 0;
@@ -130,7 +132,7 @@
 
 ::before,
 ::after {
-  --tw-content: '';
+  --tw-content: "";
 }
 
 /*
@@ -152,9 +154,10 @@ html,
   -moz-tab-size: 4;
   /* 3 */
   -o-tab-size: 4;
-     tab-size: 4;
+  tab-size: 4;
   /* 3 */
-  font-family: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji",
+    "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   /* 4 */
   font-feature-settings: normal;
   /* 5 */
@@ -197,7 +200,7 @@ Add the correct text decoration in Chrome, Edge, and Safari.
 
 abbr:where([title]) {
   -webkit-text-decoration: underline dotted;
-          text-decoration: underline dotted;
+  text-decoration: underline dotted;
 }
 
 /*
@@ -243,7 +246,8 @@ code,
 kbd,
 samp,
 pre {
-  font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+  font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas,
+    "Liberation Mono", "Courier New", monospace;
   /* 1 */
   font-feature-settings: normal;
   /* 2 */
@@ -344,9 +348,9 @@ select {
 */
 
 button,
-input:where([type='button']),
-input:where([type='reset']),
-input:where([type='submit']) {
+input:where([type="button"]),
+input:where([type="reset"]),
+input:where([type="submit"]) {
   -webkit-appearance: button;
   appearance: button;
   /* 1 */
@@ -394,7 +398,7 @@ Correct the cursor style of increment and decrement buttons in Safari.
 2. Correct the outline style in Safari.
 */
 
-[type='search'] {
+[type="search"] {
   -webkit-appearance: textfield;
   appearance: textfield;
   /* 1 */
@@ -488,7 +492,8 @@ textarea {
 2. Set the default placeholder color to the user's configured gray 400 color.
 */
 
-input::-moz-placeholder, textarea::-moz-placeholder {
+input::-moz-placeholder,
+textarea::-moz-placeholder {
   opacity: 1;
   /* 1 */
   color: #9ca3af;
@@ -577,18 +582,18 @@ video {
 
 .social-links a {
   margin: 0 10px;
-  color: #FFCC00;
+  color: #ffcc00;
   text-decoration: none;
   transition: 0.4s;
 }
 
 .social-links a:hover {
-  opacity: .6;
+  opacity: 0.6;
 }
 
 body {
   background-color: #02061a;
-  color: #FFFFFF;
+  color: #ffffff;
   font-family: "Roboto", Arial, sans-serif;
 }
 
@@ -612,10 +617,12 @@ svg {
   position: fixed;
   top: 10px;
   left: 10px;
-  font-family: Trebuchet MS, sans-serif;
+  font-family:
+    Trebuchet MS,
+    sans-serif;
   font-size: 12.2px;
   /* 20% smaller font size */
-  color: #FFCC00;
+  color: #ffcc00;
 }
 
 .rain {
@@ -663,7 +670,11 @@ body.back-row-toggle .rain.back-row {
   width: 1px;
   height: 60%;
   margin-left: 7px;
-  background: linear-gradient(to bottom, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0.25));
+  background: linear-gradient(
+    to bottom,
+    rgba(255, 255, 255, 0),
+    rgba(255, 255, 255, 0.25)
+  );
   animation: stem 0.5s linear infinite;
 }
 
@@ -722,11 +733,11 @@ body.splat-toggle .splat {
   }
 }
 
-.social-links a>img {
+.social-links a > img {
   height: 30px;
 }
 
-.social-links>img {
+.social-links > img {
   width: 250px;
   margin-bottom: 20px;
 }
@@ -742,14 +753,14 @@ body.splat-toggle .splat {
 @media screen and (max-width: 950px) {
   #bg_girl {
     height: 70vh;
-    bottom: 3vh
+    bottom: 3vh;
   }
 }
 
 @media screen and (max-width: 770px) {
   #bg_girl {
     height: 40vh;
-    bottom: 3vh
+    bottom: 3vh;
   }
 }
 
@@ -761,8 +772,15 @@ body.splat-toggle .splat {
 
 nav {
   z-index: 9998; /* Use a high value to ensure the navbar is on top */
-  background-color: rgba(255, 255, 255, 0.2); /* Frosted glass background at 20% opacity */
-  backdrop-filter: blur(20px); /* Apply blur effect to create frosted glass effect */
+  background-color: rgba(
+    255,
+    255,
+    255,
+    0.2
+  ); /* Frosted glass background at 20% opacity */
+  backdrop-filter: blur(
+    20px
+  ); /* Apply blur effect to create frosted glass effect */
 }
 
 nav a {
