--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,20 +20,36 @@
   z-index: 10;
 }
 
+/* Prevent content from showing until fully hydrated */
+.page-enter-active {
+  transition:
+    opacity 0.6s ease 0.1s,
+    /* 0.1s delay */ filter 0.6s ease 0.1s;
+}
+
+.page-enter-active,
+.page-leave-active {
+  will-change: opacity, filter, transform;
+}
+
+.page-enter-to * {
+  visibility: visible;
+}
+
 .social-links a {
   margin: 0 10px;
-  color: #FFCC00;
+  color: #ffcc00;
   text-decoration: none;
   transition: 0.4s;
 }
 
 .social-links a:hover {
-  opacity: .6;
+  opacity: 0.6;
 }
 
 body {
   background-color: #02061a;
-  color: #FFFFFF;
+  color: #ffffff;
   font-family: "Roboto", Arial, sans-serif;
 }
 
@@ -42,7 +58,7 @@ footer {
   bottom: 0;
   left: 0;
   width: 100%;
-  color: #FFFFFF;
+  color: #ffffff;
   text-align: center;
   padding: 10px 0;
 }
@@ -56,7 +72,7 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
-  color:rgb(174, 174, 174);
+  color: rgb(174, 174, 174);
 }
 svg {
   fill: currentColor;
@@ -65,9 +81,11 @@ svg {
   position: fixed;
   top: 10px;
   left: 10px;
-  font-family: Trebuchet MS, sans-serif;
+  font-family:
+    Trebuchet MS,
+    sans-serif;
   font-size: 12.2px; /* 20% smaller font size */
-  color: #FFCC00;
+  color: #ffcc00;
 }
 
 .rain {
@@ -113,7 +131,11 @@ body.back-row-toggle .rain.back-row {
   width: 1px;
   height: 60%;
   margin-left: 7px;
-  background: linear-gradient(to bottom, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0.25));
+  background: linear-gradient(
+    to bottom,
+    rgba(255, 255, 255, 0),
+    rgba(255, 255, 255, 0.25)
+  );
   animation: stem 0.5s linear infinite;
 }
 
@@ -166,10 +188,10 @@ body.splat-toggle .splat {
   }
 }
 
-.social-links a>img {
+.social-links a > img {
   height: 30px;
 }
-.social-links>img {
+.social-links > img {
   width: 250px;
   margin-bottom: 20px;
 }
@@ -184,13 +206,13 @@ body.splat-toggle .splat {
 @media screen and (max-width: 950px) {
   #bg_girl {
     height: 70vh;
-    bottom: 3vh
+    bottom: 3vh;
   }
 }
 @media screen and (max-width: 770px) {
   #bg_girl {
     height: 40vh;
-    bottom: 3vh
+    bottom: 3vh;
   }
 }
 .social-links {
